b=418915, plugin print rendering coordinates incorrect on win32; r+sr=roc